# ShittyGDBot

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  about.md  mod.json
include/GdBot/Core/: Logging.hpp  ModBootstrap.hpp
include/GdBot/Features/Cosmetics/: CosmeticUnlockService.hpp
include/GdBot/Features/Macro/: BotController.hpp  InputRecorder.hpp  InputTypes.hpp  MacroSessionCoordinator.hpp  ReplayController.hpp
include/GdBot/Overlay/: ImGuiOverlay.hpp  ImGuiOverlayBackend.hpp  OverlayInputRouter.hpp  OverlayTheme.hpp
src/Core/: Logging.cpp  ModBootstrap.cpp
src/Features/Cosmetics/: CosmeticUnlockService.cpp
src/Features/Macro/: BotController.cpp  InputRecorder.cpp  MacroSessionCoordinator.cpp  ReplayController.cpp
src/Hooks/: CosmeticUnlockBypassHook.cpp  FramePresentationHook.cpp  KeyboardInputHook.cpp  MenuLayerHook.cpp  OverlayInputBlockHook.cpp  OverlayLifecycleHook.cpp  PlayLayerSessionHook.cpp  PlayerInputHook.cpp  ReplayDispatchHook.cpp
src/Overlay/: ImGuiOpenGlBackend.cpp  ImGuiOverlay.cpp  ImGuiOverlayBackend.cpp  OverlayInputRouter.cpp  OverlayTheme.cpp
